Adjustment in PersonRepository and App.
In PersonRepository i fixed some loops, these aren't working right, it was working twice.

In App i just removed person's initialization and delete the method's call parameter.